--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,39 +1,85 @@
 .title {
-    font-size:5em;
-    text-align:center;
-    
+  font-size: 5em;
+  text-align: center;
 }
-.Button_container{
-    display: flex;
-    flex-direction: column;
-    font-size:4em;
-    text-align: center;
+.Button_container {
+  display: flex;
+  flex-direction: column;
+  font-size: 4em;
+  text-align: center;
 }
-.Equipment_container{
-    display: flex;
-    flex: 1 fr 1fr;
-    justify-content: space-between;
-    height: 4em;
-    align-items: center;
-
-      
+.Equipment_container {
+  display: flex;
+  flex: 1 fr 1fr;
+  justify-content: space-between;
+  height: 12em;
+  width: 22em;
+  align-items: center;
+  padding-left: 100px;
 }
-.button{
-    font-size: 25px;
-    height: 4em;
-    width: 60em;
-
-
+.button {
+  font-size: 25px;
+  height: 4em;
+  width: 60em;
 }
 
-.Overdue{
-    background-color: #DB162F;
+.Equipment {
+  background-color: #14bdeb;
 }
 
-.Due{
-    background-color: #FAA613;
+.Equipment-content {
+  display: none;
+  background-color: #efefef;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  
 }
 
-.Equipment{
-    background-color: #14bdeb;
+.Overdue {
+  background-color: #db162f;
+}
+
+.Overdue-content {
+  display: none;
+  background-color: #efefef;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  
+}
+
+.Due {
+  background-color: #faa613;
+}
+
+.Due-content {
+  display: none;
+  background-color: #efefef;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.Upcoming {
+  background-color: #eff1f3;
+}
+
+.Upcoming-content {
+  display: none;
+  background-color: #efefef;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+.show {
+  display: block;
 }
