--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,7 +18,7 @@ body {
     background-repeat: no-repeat;
     background-position:top;
     background-size: 800px;
-    
+    background-attachment: fixed;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
