--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -31,7 +31,7 @@
   display: none;
   background-color: #efefef;
   position: absolute;
-  min-width: 160px;
+  min-width: 29em;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -46,7 +46,7 @@
   display: none;
   background-color: #efefef;
   position: absolute;
-  min-width: 160px;
+  min-width: 29em;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -61,7 +61,7 @@
   display: none;
   background-color: #efefef;
   position: absolute;
-  min-width: 160px;
+  min-width: 29em;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -75,7 +75,7 @@
   display: none;
   background-color: #efefef;
   position: absolute;
-  min-width: 160px;
+  min-width: 29em;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -83,3 +83,4 @@
 .show {
   display: block;
 }
+
