--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -36,7 +36,6 @@
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
-  
 }
 
 .Overdue {
@@ -47,11 +46,10 @@
   display: none;
   background-color: #efefef;
   position: absolute;
-  min-width: 29em;
+  width: 90%;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
-  
 }
 
 .Due {
@@ -62,7 +60,7 @@
   display: none;
   background-color: #efefef;
   position: absolute;
-  min-width: 29em;
+  width: 90%;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -76,7 +74,7 @@
   display: none;
   background-color: #efefef;
   position: absolute;
-  min-width: 29em;
+  width: 90%;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
@@ -84,4 +82,13 @@
 .show {
   display: block;
 }
-
+.task-label {
+  font-weight: bold;
+  font-size: 25px;
+  padding-right: 1000px;
+}
+.lastdone-label{
+  font-weight: bold;
+  font-size: 25px;
+  
+}
