--- a/src/style/task-styles.scss
+++ b/src/style/task-styles.scss
@@ -25,7 +25,18 @@
     width:225px;
     justify-content: center;
     align-content: center;
+    .help-button{
+      background-color:#eeeeee;
+      border: grey 1px solid;
+
+      width: 62px;
+      height: 75px;
+      justify-content: center;
+      align-items: center;
+    }
     .button {
+      background-color:#eeeeee;
+      border: grey 1px solid;
       display: grid;
       width: 62px;
       height: 75px;
@@ -33,6 +44,7 @@
       align-items: center;
       .action-icon {
         display: grid;
+        color:black;
 
         padding: 0px;
         height: 50%;
