--- a/src/style/task-styles.scss
+++ b/src/style/task-styles.scss
@@ -13,29 +13,21 @@
     }
 
     .task {
-      width: 1000px;
+      width: 725px;
       height: 75px;
       align-content: center;
     }
   }
   .actions {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     height: 75px;
-    width:225px;
+    width: 175px;
     justify-content: center;
     align-content: center;
-    .help-button{
-      background-color:#eeeeee;
-      border: grey 1px solid;
 
-      width: 62px;
-      height: 75px;
-      justify-content: center;
-      align-items: center;
-    }
     .button {
-      background-color:#eeeeee;
+      background-color: #eeeeee;
       border: grey 1px solid;
       display: grid;
       width: 62px;
@@ -44,14 +36,16 @@
       align-items: center;
       .action-icon {
         display: grid;
-        color:black;
+        color: black;
 
         padding: 0px;
         height: 50%;
         cursor: pointer;
       }
     }
-
+    .edit-task-form {
+      display: none;
+    }
     .content {
       display: none;
     }
