--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -54,6 +54,7 @@
             display: grid;
             width: 1500px;
             grid-template-columns: 1fr 1fr 1fr;
+            border-bottom: black solid;
             .task-label,
             .lastdone-label,
             .click-to-complete {
@@ -77,8 +78,9 @@
                   grid-template-columns: 1fr 1fr;
                   justify-items: center;
                   width: 1250px;
+                  
                   .task {
-                    width: 1100px;
+                    width: 1000px;
                     align-content: center;
                   }
                   .date {
