--- a/src/style/NavStyles.scss
+++ b/src/style/NavStyles.scss
@@ -1,14 +1,33 @@
 .nav-wrapper {
   display: grid;
+  grid-template-columns: 1fr;
+  
   font-size: 20px;
   justify-content: center;
+  align-items: center;
+  width: 1500px;
+
   .nav-link-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: center;
     justify-items: center;
     width: 1500px;
     height: 200px;
+    .main-login-wrapper {
+      display: grid;
+      grid-template-rows: 1fr;
+      justify-items: center;
+      align-items: center;
+      width: 100%;
+      height: 150px;
+
+      .login {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+      }
+    }
 
     .scan,
     .search,
@@ -24,6 +43,34 @@
         font-size: 125px;
         display: grid;
         justify-content: center;
+      }
+    }
+  }
+
+  .login-container {
+    display: block;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+
+    .login-wrapper {
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      width: 300px;
+      justify-content: center;
+      .hide {
+        display: none;
+      }
+      .login-box {
+        display: grid;
+
+        justify-content: center;
+        align-items: center;
+        .button-container {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          
+        }
       }
     }
   }
