--- a/src/style/record-list.scss
+++ b/src/style/record-list.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 7fr 1fr; //text content and actions
   padding: 30px;
-  justify-content: center;
+  justify-self: center;
   justify-items: center;
   align-items: center;
   width: 1600px;
@@ -15,7 +15,7 @@
     width: 100%;
     padding: 30px;
     justify-items: left;
-    justify-content: center;
+    justify-self: center;
 
     .item-card {
       display: grid;
@@ -39,11 +39,11 @@
 
         .bottom {
           height: 309px;
-          justify-content: center;
-          align-content: bottom;
+          justify-self: center;
+          align-self: baseline;
           img {
-            width: 100%;
-            height: auto;
+            width: auto;
+            height: 100%;
           }
         }
       }
