working in dev mode

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -18,6 +18,7 @@
         display: grid;
         grid-template-rows: 1fr 1fr 1fr;
         justify-content: center;
+        padding: 0.5em 0.5em;
 
         .Overdue-container,
         .Due-container,
