--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,36 +1,42 @@
 html {
-    font-size: 62.5%; // 1rem is 10px
+  font-size: 62.5%; // 1rem is 10px
 }
 
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-    font-family: 'montserrat';
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  font-family: "montserrat";
 }
 
 body {
-    overflow-x: hidden;
-    font-weight: normal;
-    background-image: url('/static/assets/images/lockimg.png') !important;
-    background-repeat: no-repeat;
-    background-position:top;
-    background-size: 800px;
-    background-attachment: fixed;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    -webkit-tap-highlight-color: transparent;
-    
+  overflow-x: hidden;
+  font-weight: normal;
+  background-image: url("/static/assets/images/lockimg.png") !important;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: 800px;
+  background-attachment: fixed;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: transparent;
+  
 }
 
 .app-wrapper {
-    background-image: url('/static/assets/images/SECURE\ BACKSPLASH.png');
-    margin-top: 2rem;
-    display: grid;
-    justify-items: center;
-    width: 90vw;
-}
+  background-image: url("/static/assets/images/SECUREBACKSPLASH.png");
+  margin-top: 2rem;
+  display: grid;
+  justify-content: center;
+  width: 90vw;
 
+  .form-manager {
+    display: grid;
+    width: 9vw;
+    
+  }
+
+}
