--- a/src/style/manager.scss
+++ b/src/style/manager.scss
@@ -6,12 +6,49 @@
   height: auto;
   width: 90vw;
 }
+.form-manager {
+  display: grid;
+  justify-content: center;
+  .add-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 500px;
+    height: 300px;
+    .add-left {
+      width: 250px;
+      grid-column: span 1;
+      grid-row: 1;
+    }
+    .add-right {
+      width: 250px;
+      justify-items: start;
+      grid-column: 2;
+      grid-row: 1;
+    }
+    .file-holder {
+      .qrcode {
+        grid-column: 1;
+        grid-row: 2;
+      }
+    }
+    .filepicker {
+      grid-column: 2;
+      grid-row: 2;
+    }
+
+    .save {
+      grid-column: span 1.5 / span 2.5;
+      grid-row: 3;
+    }
+  }
+}
 .specs-manager-wrapper {
   display: grid;
   grid-template-rows: 1fr 1fr;
-
+  justify-content: center;
   justify-items: center;
-  width: 90vw;
+  width: 60vw;
   height: 720px;
 
   .Specs-list-wrapper {
@@ -41,52 +78,4 @@
   width: 800px;
   display: grid;
   justify-content: center;
-}
-@media (max-width: 900px) {
-  .manager-container {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    height: auto;
-    width: 90vw;
-  }
-  .specs-manager-wrapper {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-
-    justify-items: center;
-    width: 9vw;
-    height: 20px;
-
-    .Specs-list-wrapper {
-      display: grid;
-      width: fit-content;
-      width: 9vw;
-      height: 250px;
-      justify-items: end;
-      justify-content: center;
-    }
-  }
-
-  .button {
-    position: static;
-  }
-
-  .specs {
-    display: none;
-  }
-
-  .tasks {
-    display: none;
-  }
-
-  .show {
-    display: block;
-    height: 100px;
-    width: 800px;
-    display: grid;
-    justify-content: center;
-  }
 }
