--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,7 +14,7 @@ html {
 body {
   overflow-x: hidden;
   font-weight: normal;
-  background-image: url("/static/assets/images/lockimg.png") !important;
+  background-image: url('/static/assets/images/lockimg.png') !important;
   background-repeat: no-repeat;
   background-position: top;
   background-size: 800px;
