--- a/src/style/homepage.scss
+++ b/src/style/homepage.scss
@@ -1,7 +1,7 @@
 .homepage{
     overflow-x: hidden;
     font-weight: normal;
-    background-image: url('/static/assets/images/lockimg.png') !important;
+    background-image: url('../../static/assets/images/lockimg.png') ;
     background-repeat: no-repeat;
     background-position:top;
     background-size: 800px;
