--- a/src/style/specs-page.scss
+++ b/src/style/specs-page.scss
@@ -1,4 +1,6 @@
 .detail-wrapper {
+  justify-self: center;
+  max-width: fit-content;
   .Specs-item-container {
     display: grid;
     grid-template-columns: 7fr 1fr; //text content and actions
@@ -9,28 +11,28 @@
     width: 1600px;
 
     .text-content {
-      height: 100%;
-      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
       padding: 30px;
       justify-items: left;
-      justify-content: center;
+      justify-self: center;
 
       .item-card {
         display: grid;
         justify-content: center;
         grid-template-columns: 1fr 1fr; //leftside and rightside
-        height: 5em;
+        height: 35em;
 
         .leftside {
           display: grid;
           grid-template-rows: 1fr 1fr;
-
+          width: 100%;
           .top {
-            height: 325px;
+            height: 100%;
             justify-content: center;
             align-items: center;
             img {
-              width: 60%;
+              max-width: 60%;
               height: auto;
               padding: 10px;
             }
@@ -38,12 +40,11 @@
 
           .bottom {
             height: 309px;
-            justify-content: center;
-            align-content: bottom;
+            justify-self: center;
+            align-self: baseline;
             img {
-              width: 100%;
+              max-width: 100%;
               height: auto;
-              
             }
           }
         }
@@ -74,13 +75,106 @@
     .actions {
       display: grid;
       grid-template-columns: 1fr;
-      height: 650px;
+      max-height: 650px;
       justify-items: center;
       align-items: baseline;
 
       .action-icon {
         font-size: 400%;
         padding: 50px;
+      }
+    }
+  }
+}
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .detail-wrapper {
+    .Specs-item-container {
+      display: grid;
+      grid-template-columns: 7fr 1fr; //text content and actions
+      padding: 5%;
+      justify-content: center;
+      justify-items: center;
+      align-items: center;
+      width: 0vw;
+      height: 85%;
+
+      .text-content {
+        height: 104%;
+        width: 80%;
+        padding: 30px;
+        justify-items: center;
+        justify-self: center;
+        align-self: center;
+
+        .item-card {
+          display: grid;
+          justify-content: center;
+          grid-template-columns: 1fr 1fr; //leftside and rightside
+          gap: 20%;
+          height: 5em;
+
+          .leftside {
+            display: grid;
+            grid-template-rows: 1fr 1fr;
+            width: 1500%;
+
+            .top {
+              height: 50%;
+              justify-self: center;
+              align-items: center;
+              img {
+                max-width: 60%;
+                height: auto;
+                padding: 10px;
+              }
+            }
+
+            .bottom {
+              height: 50%;
+              justify-self: center;
+              align-self: baseline;
+              img {
+                max-width: 78%;
+                height: auto;
+              }
+            }
+          }
+          .rightside {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            border-style: solid;
+            margin-left: 150px;
+            height: 14em;
+            width: 17em;
+
+            font-size: 185%;
+            .left {
+              .item {
+                justify-content: space-between;
+                margin: 0px 25px 50px 0px;
+                font-weight: bold;
+              }
+            }
+            .right {
+              .item {
+                justify-content: space-between;
+                margin: 0px 25px 50px 0px;
+              }
+            }
+          }
+        }
+      }
+      .actions {
+        display: grid;
+        grid-template-columns: 1fr;
+        height: 450px;
+        justify-items: center;
+        align-items: baseline;
+
+        .action-icon {
+          font-size: 400%;
+          padding: 50px;
+        }
       }
     }
   }
