--- a/src/style/task-bar.scss
+++ b/src/style/task-bar.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   .task-wrapper {
     display: grid;
-    
+
     justify-content: center;
 
     .task-bar-container {
@@ -11,17 +11,45 @@
       grid-template-rows: 1fr 1fr 1fr;
       justify-content: center;
       .Overdue-container {
-       
         justify-content: center;
         .button {
-          
           justify-content: center;
         }
-        .Overdue-content{
+        .Overdue-content {
+          display: grid;
+          grid-template-rows: 1fr 2fr;
+          width: 1200px;
+          justify-content: center;
+        }
+      }
+    }
+  }
+}
+@media only screen and (min-width: 600px) {
+  .wrapper {
+    display: grid;
+    justify-content: center;
+    width: 90%;
+    .task-wrapper {
+      display: grid;
+
+      justify-content: center;
+
+      .task-bar-container {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        justify-content: center;
+        .Overdue-container {
+          justify-content: center;
+          .button {
+            justify-content: center;
+          }
+          .Overdue-content {
             display: grid;
             grid-template-rows: 1fr 2fr;
             width: 1200px;
             justify-content: center;
+          }
         }
       }
     }
