--- a/src/style/NavStyles.scss
+++ b/src/style/NavStyles.scss
@@ -34,8 +34,9 @@
 
     .link-wrapper {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       width: 500px;
+      .home,
       .search,
       .manager {
         display: grid;
