--- a/src/style/homepage.scss
+++ b/src/style/homepage.scss
@@ -6,4 +6,7 @@
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     -webkit-tap-highlight-color: transparent;
+    p{
+        font-size: 4em;
+    }
 }
