--- a/src/style/specs-page.scss
+++ b/src/style/specs-page.scss
@@ -33,6 +33,7 @@
             align-items: center;
             img {
               max-width: 60%;
+              width: 700px;
               height: auto;
               padding: 10px;
             }
